# hit_annotation_v2

./: .gitignore  README.md  test.py  test_smooth.py
backend/: init_session.py  main.py  pyproject.toml
backend/db/: database.py  models.py
backend/routes/: config.py  files.py  labels.py  training.py  websocket.py
backend/routes/task_handlers/: __init__.py  classification.py  segmentation.py
backend/utils/: __init__.py  label_utils.py  point_extraction.py
db/: database.py  models.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.ts  types.ts  ui.ts  websocket.ts
frontend/src/pages/files/: FilesView.ts  files.css
frontend/src/pages/labeling/: LabelingView.ts  labeling.css
frontend/src/pages/labeling/components/: ClassificationUI.ts  SegmentationUI.ts
frontend/src/pages/welcome/: WelcomeView.ts  welcome.css
frontend/src/shared/: api.ts  global.css  state.ts
frontend/styles/: main.css
initialization/: README.md  classification_config.yaml  dip_picking_config.yaml  init_session.py  pyproject.toml
ml_service/: __init__.py  classification_head.py  data_loader.py  inference.py  model.py  pyproject.toml  task_factory.py  train.py  training_loop.py  utils.py
ml_service/data_loaders/: __init__.py  base.py  classification.py  segmentation.py
ml_service/losses/: __init__.py  classification.py  segmentation.py
ml_service/models/: __init__.py  classification_head.py  segmentation_head.py
