[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for active learning annotation tool"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "python-multipart>=0.0.9",
    "websockets>=13.0",
    "pillow>=10.0.0",
    "aiosqlite>=0.20.0",
    "greenlet>=3.2.4",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchmetrics>=1.8.2",
    "termcolor>=3.2.0",
    "scipy>=1.15.3",
    "opencv-python>=4.11.0.86",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
]
